# scolix-core

./: .gitignore  Cargo.toml  LICENSE  build.sh
daemon/: Cargo.toml
daemon/src/: main.rs
scolix-core-cli/: Cargo.toml
scolix-core-cli/src/: lib.rs
scolix-core-daemon/: Cargo.toml
scolix-core-daemon/src/: build_cfg.rs  main.rs
scolix-core-daemon/src/localhost/: server.rs
scolix-core-daemon/src/remote/: server.rs
scolix-core-daemon/src/repository/: mod.rs  sqlfunctions.rs  sqllitebasecommands.rs
scolix-core-daemon/src/types/: person.rs
scolix-core-types/: Cargo.toml
scolix-core-types/src/: lib.rs
src/: consts.rs  main.rs  session.rs
src/db/: mod.rs  sql.rs  types.rs
