[package]
name = "scolix-core"
version = "0.1.0"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bit_field = "0.10.1"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]