[package]
name = "scolix-core-daemon"
version = "0.1.0"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>", "Mike Krop <mikekrop2002@hotmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
rusqlite = "0.23.1"
futures = "0.3.4"
scolix-core-cli = { version = "0.1.0", path = "../scolix-core-cli" }